Gitignore & env example

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# General
+.env
+.env.*
+!.env.example
+
 # Logs
 logs
 *.log
@@ -7,12 +12,34 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Python
+venv
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.db
+
+# Migrations
+alembic.ini
+migrations/versions/*.pyc
+
+# Docker
+*.pid
+*.seed
+*.pid.lock
+docker-compose.override.yml
+.docker
+.dockerignore
+
+# Editor / OS
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +49,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Cache / Build
+.cache/
+coverage/
+*.egg-info
