--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,23 @@
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
+bcrypt==4.3.0
+cffi==2.0.0
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.7
+dnspython==2.8.0
+email_validator==2.2.0
 fastapi==0.116.1
 FastAPI-SQLAlchemy==0.2.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
+jwt==1.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 psycopg2==2.9.10
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
@@ -20,5 +27,3 @@ starlette==0.47.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 uvicorn==0.35.0
-email-validator==2.2.0
-bcrypt==4.3.0
