--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,14 +13,15 @@ FastAPI-SQLAlchemy==0.2.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
-jwt==1.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 psycopg2==2.9.10
 pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyJWT==2.10.1
 python-dotenv==1.1.1
+python-multipart==0.0.20
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.47.3
