--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
 bcrypt==4.3.0
+boto3==1.40.31
+botocore==1.40.31
 cffi==2.0.0
 click==8.2.1
 colorama==0.4.6
@@ -13,6 +15,7 @@ FastAPI-SQLAlchemy==0.2.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
+jmespath==1.0.1
 Mako==1.3.10
 MarkupSafe==3.0.2
 psycopg2==2.9.10
@@ -20,11 +23,15 @@ pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+s3transfer==0.14.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.47.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+urllib3==2.5.0
 uvicorn==0.35.0
